Bug 307618 - parsing problem with anniversary property converted to upper case
Summary: parsing problem with anniversary property converted to upper case
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: DAV Resource (other bugs)
Version First Reported In: 4.9
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-30 15:07 UTC by Johann-Nikolaus Andreae
Modified: 2012-10-01 06:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Johann-Nikolaus Andreae 2012-09-30 15:07:26 UTC
ownCloud convert the anniversary property to upper case on sync.
After the conversion it is interpreted as custom field.

Before sync:
X-KADDRESSBOOK-X-Anniversary:2012-01-01

After sync:
X-KADDRESSBOOK-X-ANNIVERSARY:2012-01-01

Tested with ownCloud 4.5 rc1

Reproducible: Always
Comment 1 Laurent Montel 2012-10-01 06:08:34 UTC
Git commit 9c98fd6aa01d4d4d57070a5f31ea3699ecfe4b5d by Montel Laurent.
Committed on 01/10/2012 at 08:07.
Pushed by mlaurent into branch 'KDE/4.9'.

fix Bug 307618 - parsing problem with anniversary property

converted to upper case

FIXED-IN: 4.9.3

M  +1    -0    akonadi/contact/editor/customfieldseditwidget.cpp
M  +1    -1    akonadi/contact/standardcontactformatter.cpp

http://commits.kde.org/kdepimlibs/9c98fd6aa01d4d4d57070a5f31ea3699ecfe4b5d