fix Bug 307618 - parsing problem with anniversary property

converted to upper case

FIXED-IN: 4.9.3
BUG: 307618